# test_aiogram_bot

./: .gitignore  Dockerfile  README.md  database.db  dump.rdb  loggers.py  model.py  pyproject.toml  run.py
config/: env.env  logging.conf.json  settings.py
handlers/: echo.py  error_handler.py  help.py  photo.py  registration.py  selection_callback.py  start.py  text_handler.py  users.py  weather.py
keyboards/: selection.py
middlewares/: reminder.py
states/: user_data.py  weather_city.py
utils/: openweathermap_api.py  tasks.py
